--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,41 @@
+aiohttp==3.9.5
+aioredis==2.0.1
 attr==0.3.2
+brotli==1.1.0
+brotlicffi==1.1.0.0
+coloredlogs==15.0.1
 ConfigParser==7.0.0
 contextlib2==21.6.0
-cryptography==42.0.5
+cryptography==42.0.7
 docutils==0.21.2
+fastapi==0.111.0
+h2==4.1.0
 HTMLParser==0.0.2
 importlib_metadata==7.1.0
 ipython==8.12.3
 ipywidgets==8.1.2
-Jinja2==3.1.2
+Jinja2==3.1.4
 jnius==1.1.0
-keyring==25.1.0
+js==1.0
+keyring==25.2.1
 lockfile==0.12.2
 mock==5.1.0
 Pillow==10.3.0
 protobuf==5.26.1
+psutil==5.9.8
+pyodide==0.0.2
 pyOpenSSL==24.1.0
-pyTelegramBotAPI==4.15.1
-pyTelegramBotAPI==4.17.0
 railroad==0.5.0
+redis==5.0.4
+simplejson==3.19.2
 Sphinx==7.3.7
-thread==2.0.0
+starlette==0.37.2
+thread==2.0.1
 tornado==6.4
-truststore==0.8.0
+truststore==0.9.1
+ujson==5.10.0
 urllib3_secure_extra==0.1.0
+uvicorn==0.29.0
+watchdog==4.0.0
 xmlrpclib==1.0.1
+zstandard==0.22.0
